# 96boards-uart

./: 96boards-uart-bom-test.xlsx  96boards-uart-cache.lib  96boards-uart-ft230x.xml  96boards-uart-rescue.lib  96boards-uart.cmp  96boards-uart.dsn  96boards-uart.kicad_pcb  96boards-uart.lib  96boards-uart.lst  96boards-uart.mod  96boards-uart.net  96boards-uart.pro  96boards-uart.sch  Makefile  mosfet.dcm  mosfet.lib  notes
96boardsctl/: 96boardsctl.c  CMakeLists.txt  README  config.h.in
96boardsctl/udev-rules/: 71-ftdi_sio.rules
ftdi_eeprom/: ftdi_eeprom.conf
src/: 96boardctl.c  Makefile  README
